fixed align

--- a/styles/default_style.css
+++ b/styles/default_style.css
@@ -175,5 +175,5 @@ img.clickable-image:hover{
   }
 
   #formation, #compet{
-    align-self: left;
+    align-self: flex-start;
   }
